// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render covered line 1`] = `
<Tooltip
  overlay="source_viewer.tooltip.covered"
  placement="right"
>
  <td
    className="source-meta source-line-coverage source-line-covered"
    data-line-number={3}
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="source-line-bar"
    />
  </td>
</Tooltip>
`;

exports[`render line with unknown coverage 1`] = `
<td
  className="source-meta source-line-coverage"
  data-line-number={3}
>
  <div
    className="source-line-bar"
  />
</td>
`;

exports[`render uncovered line 1`] = `
<Tooltip
  overlay="source_viewer.tooltip.uncovered"
  placement="right"
>
  <td
    className="source-meta source-line-coverage source-line-uncovered"
    data-line-number={3}
  >
    <div
      className="source-line-bar"
    />
  </td>
</Tooltip>
`;
